syntax = "proto3";

package leafgrpc.v1;

import "google/api/annotations.proto";
import "leaf-grpc/v1/segment.proto";
import "google/protobuf/timestamp.proto";

option go_package = "goLeaf/api/leaf-grpc/v1;v1";

// Leaf ID生成
service LeafSnowflakeService {
    // 雪花ID
    rpc GenSnowflakeId (IdRequest) returns (IdReply) {
        option (google.api.http) = {
            get: "/api/snowflake/get"
            response_body: "id"
            additional_bindings: {
                get: "/api/v2/snowflake/get"
            }
        };
    }
    // 解析雪花ID
    rpc DecodeSnowflakeId (DecodeSnowflakeIdReq) returns (DecodeSnowflakeIdResp) {
        option (google.api.http) = {
            get: "/decodeSnowflakeId"
        };
    }
    // 获取当前server的时间戳
    rpc GetServerTimestamp (GetServerTimestampReq) returns (GetServerTimestampResp) {}
}

message GetServerTimestampReq {
    string msg = 1;
}

message GetServerTimestampResp {
    google.protobuf.Timestamp timestamp = 1;
}

message DecodeSnowflakeIdReq {
    string id = 1;
}

message DecodeSnowflakeIdResp {
    string worker_id = 1;
    string sequence_id = 2;
    string timestamp = 3;
}
